--- a/config/r3live_config_zhongnan.yaml
+++ b/config/r3live_config_zhongnan.yaml
@@ -22,19 +22,20 @@ Lidar_front_end:
       #[1, 0, 0,
       # 0, 0, 1,
       # 0, -1, 0]
-   min_dist: 0.5
+   min_dist: 1.0
    max_dist: 5.0
 
 r3live_common:
    if_dump_log: 0                   # If recording ESIKF update log. [default = 0]
    record_offline_map: 1            # If recording offline map. [default = 1]
-   pub_pt_minimum_views: 3          # Publish points which have been render up to "pub_pt_minimum_views" time. [default = 3]
-   minimum_pts_size: 0.01           # The minimum distance for every two points in Global map (unit in meter). [default = 0.01] 
+   pub_pt_minimum_views: 5          # Publish points which have been render up to "pub_pt_minimum_views" time. [default = 3]
+   minimum_pts_size: 0.0001           # The minimum distance for every two points in Global map (unit in meter). [default = 0.01] 
+   track_windows_size: 30          
    image_downsample_ratio: 1        # The downsample ratio of the input image. [default = 1]
-   estimate_i2c_extrinsic: 1        # If enable estimate the extrinsic between camera and IMU. [default = 1] 
-   estimate_intrinsic: 1            # If enable estimate the online intrinsic calibration of the camera lens. [default = 1] 
+   estimate_i2c_extrinsic: 0        # If enable estimate the extrinsic between camera and IMU. [default = 1] 
+   estimate_intrinsic: 0            # If enable estimate the online intrinsic calibration of the camera lens. [default = 1] 
    maximum_vio_tracked_pts: 60000     # The maximum points for tracking. [default = 600]
-   append_global_map_point_step: 4  # The point step of append point to global map. [default = 4]
+   append_global_map_point_step: 1  # The point step of append point to global map. [default = 4]
 
 r3live_vio:
    image_width: 4096
@@ -77,12 +78,16 @@ r3live_vio:
    # camera_ext_t: [0,0,0] 
    
 r3live_lio:        
-   lio_update_point_step: 4   # Point step used for LIO update.  
+   lio_update_point_step: 1   # Point step used for LIO update.  
    max_iteration: 1000           # Maximum times of LIO esikf.
    lidar_time_delay: 0        # The time-offset between LiDAR and IMU, provided by user. 
-   filter_size_corner: 0.2   
-   filter_size_surf: 0.2
-   filter_size_surf_z: 0.2
+   filter_size_corner: 0.1   
+   filter_size_surf: 0.1
+   filter_size_surf_z: 0.1
    filter_size_map: 0.1
    voxel_downsample_size_surf: 0.1
-   maximum_res_dis: 0.1
+   # maximum_res_dis: 0.1
+   planar_check_dis: 0.02 #0.02
+
+   maximum_pt_kdtree_dis: 0.3 # default 0.5
+   maximum_res_dis: 0.05 # default 0.1
